[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nerva"
version = "0.0.1"
authors = [
  { name="Wieger Wesselink", email="j.w.wesselink@tue.nl" },
]
description = "A stub for the Nerva neural network package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Boost Software License 1.0 (BSL-1.0)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/wiegerw/nerva_stub"
"Bug Tracker" = "https://github.com/wiegerw/nerva_stub/issues"
